fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
+html, body {
+  overflow-x: hidden;
+}
 
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   background-color: var(--theme-color);
-  overflow-x: hidden;
   font-size: var(--font-size);
 }
 
